RSB-112 Add proper exceptions + VO's validation + correct unit tests